# Histogram-equalization

./: CMakeLists.txt  README.md  cuda_main.cu  cuda_variation.cu  execution_times.csv  execution_times_cuda.csv  execution_times_cuda_grayscale.csv  execution_times_sequential.csv  plot_execution_times.py  sequential_main copy.cpp  sequential_main.cpp
include/: Utility.h  UtilityCuda copy.cu  UtilityCuda.cu  Utility_Cuda.cu  help me.cu
profiling/: histogram_cuda_profile.ncu-rep  how to do it.txt
